# embind_threading

./: .gitignore  CMakeLists.txt  README.md
artifacts/served/: page_example.html  script_example.js  script_example.worker.js  serve.py
include/example/: example.h  task_group.h
src/: example.cpp  task_group.cpp
test/: CMakeLists.txt  test_example.cpp
wrap/embind_example/: CMakeLists.txt
wrap/embind_example/include/embind_example/: embind_example.h
wrap/embind_example/src/: example_wasm.cpp
